# MCP.CL

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  data_loader.py  docker-compose.yml  gemini-code-1783047374221.py  ontology.json  pyproject.toml  requeriments.txt.txt  requirements.txt  server.py
